# phpcades

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.unix  PHPCadesAbout.cpp  PHPCadesAbout.h  PHPCadesCPAlgorithm.cpp  PHPCadesCPAlgorithm.h  PHPCadesCPAttribute.cpp  PHPCadesCPAttribute.h  PHPCadesCPAttributes.cpp  PHPCadesCPAttributes.h  PHPCadesCPBasicConstraints.cpp  PHPCadesCPBasicConstraints.h  PHPCadesCPCardholderData.cpp  PHPCadesCPCardholderData.h  PHPCadesCPCertificate.cpp  PHPCadesCPCertificate.h  PHPCadesCPCertificateStatus.cpp  PHPCadesCPCertificateStatus.h  PHPCadesCPCertificates.cpp  PHPCadesCPCertificates.h  PHPCadesCPEKU.cpp  PHPCadesCPEKU.h  PHPCadesCPEKUs.cpp  PHPCadesCPEKUs.h  PHPCadesCPEncodedData.cpp  PHPCadesCPEncodedData.h  PHPCadesCPEnvelopedData.cpp  PHPCadesCPEnvelopedData.h  PHPCadesCPExtendedKeyUsage.cpp  PHPCadesCPExtendedKeyUsage.h  PHPCadesCPHashedData.cpp  PHPCadesCPHashedData.h  PHPCadesCPKeyUsage.cpp  PHPCadesCPKeyUsage.h  PHPCadesCPOID.cpp  PHPCadesCPOID.h  (+33 more)
cplib/: DateTime.h  StringProxy.h
doc/: phpcades-build.md  phpcades-samples.md
samples/: sample_raw_signature.php  test_extension.php
src/: CMakeLists.txt  PHPCadesAbout.cpp  PHPCadesAbout.h  PHPCadesCPAlgorithm.cpp  PHPCadesCPAlgorithm.h  PHPCadesCPAttribute.cpp  PHPCadesCPAttribute.h  PHPCadesCPAttributes.cpp  PHPCadesCPAttributes.h  PHPCadesCPBasicConstraints.cpp  PHPCadesCPBasicConstraints.h  PHPCadesCPCertificate.cpp  PHPCadesCPCertificate.h  PHPCadesCPCertificateStatus.cpp  PHPCadesCPCertificateStatus.h  PHPCadesCPCertificates.cpp  PHPCadesCPCertificates.h  PHPCadesCPEKU.cpp  PHPCadesCPEKU.h  PHPCadesCPEKUs.cpp  PHPCadesCPEKUs.h  PHPCadesCPEncodedData.cpp  PHPCadesCPEncodedData.h  PHPCadesCPEnvelopedData.cpp  PHPCadesCPEnvelopedData.h  PHPCadesCPExtendedKeyUsage.cpp  PHPCadesCPExtendedKeyUsage.h  PHPCadesCPHashedData.cpp  PHPCadesCPHashedData.h  PHPCadesCPKeyUsage.cpp  PHPCadesCPKeyUsage.h  PHPCadesCPOID.cpp  PHPCadesCPOID.h  PHPCadesCPPrivateKey.cpp  PHPCadesCPPrivateKey.h  PHPCadesCPPublicKey.cpp  PHPCadesCPPublicKey.h  PHPCadesCPRawSignature.cpp  PHPCadesCPRawSignature.h  PHPCadesCPRecipients.cpp  (+18 more)
src/cplib/: Blob.h  DateTime.h  StringProxy.h  cpstldll.h
tests/fixtures/: phpcades-root.cer  phpcades-root.crl  phpcades-test.pfx
tests/scripts/: setup-crl.sh  setup-leaf.sh  setup-root.sh
